Bug 92589 - FTP URL typecodes not supported
Summary: FTP URL typecodes not supported
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: ftp (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-11-02 16:31 UTC by jgoerzen
Modified: 2011-03-18 03:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jgoerzen 2004-11-02 16:31:49 UTC
Version:            (using KDE KDE 3.3.0)
OS:                Linux

Per RFC1738, this is a valid FTP URL for the file /pub/README:

ftp://ftp.kernel.org/pub/README;type=a

However, attempting to access that in Konqueror yields an error.
Leaving off the typecode causes it to work fine.
Comment 1 Nicolas Goutte 2005-05-16 18:45:53 UTC
Still true
Comment 2 Eckhart Wörner 2010-04-17 13:35:03 UTC
Bug still exists in KDE SC 4.4.2
Comment 3 Dawit Alemayehu 2011-03-18 03:13:24 UTC
Git commit 7622ef42bc895cdbf30f15098445f48b684e1314 by Dawit Alemayehu.
Committed on 18/03/2011 at 03:10.
Pushed by adawit into branch 'KDE/4.6'.

Correctly handle FTP urls with type code in their path as specified in RFC 1738,
e.g. ftp://ftp.kernel.org/pub/README;type=a

BUG:92589
REVIEW:100872
FIXED-IN:4.6.2

M  +30   -3    kioslave/ftp/ftp.cpp     
M  +12   -0    kioslave/ftp/ftp.h     

http://commits.kde.org/kdelibs/7622ef42bc895cdbf30f15098445f48b684e1314