Correctly handle FTP urls with type code in their path as specified in RFC 1738, e.g. ftp://ftp.kernel.org/pub/README;type=a

BUG:92589
REVIEW:100872
FIXED-IN:4.6.2